--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           command: docker build -t $DOCKER_IMAGE .
       - run:
           name: Login on dockerhub
-          command: docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+          command: echo "$DOCKERHUB_PASSWORD" | docker login --username $DOCKERHUB_USERNAME --password-stdin
       - run:
           name: Tag image
           command: docker tag $DOCKER_IMAGE $DOCKERHUB_ID/$DOCKER_IMAGE:${CIRCLE_TAG:-lts-alpine}
